@@ -7,7 +7,7 @@ role: User, Admin, Leader
 feature: Connected Assets,User and Groups
 exl-id: 4ceb49d8-b619-42b1-81e7-c3e83d4e6e62
 hide: true
-source-git-commit: 50d29c967a675db92e077916fb4adef6d2d98a1a
+source-git-commit: bc6a97a55f392cba03131ee3ca7cad35b8c1e69b
 workflow-type: tm+mt
 source-wordcount: '3949'
 ht-degree: 17%
@@ -92,7 +92,7 @@ Per configurare le risorse collegate e locali [!DNL Sites] connettività, segui 
 1. Accedere a un [!DNL Sites] distribuire o creare una distribuzione utilizzando il comando seguente:
 
    1. Nella cartella del file JAR, esegui il seguente comando su un terminale per creare ogni [!DNL Experience Manager] server.
-      `java -XX:MaxPermSize=768m -Xmx4096m -jar <quickstart jar filepath> -r samplecontent -p 4502 -nofork -gui -nointeractive &`
+      `java -Xmx4096m -jar <quickstart jar filepath> -r samplecontent -p 4502 -nofork -gui -nointeractive &`
 
    1. Dopo alcuni minuti, [!DNL Experience Manager] il server viene avviato correttamente. Considera questo [!DNL Sites] come computer locale per l’authoring delle pagine web, ad esempio all’indirizzo `https://[local_sites]:4502`.
 
